--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,27 +1,29 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
-    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
+    android:layout_height="match_parent"
+    android:paddingBottom="@dimen/activity_vertical_margin"
+    android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">
+    tools:context=".MainActivity">
 
     <TableLayout
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
-        android:layout_alignParentTop="true"
         android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true">
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true">
 
         <TableRow
             android:layout_width="fill_parent"
             android:layout_height="fill_parent">
 
             <Button
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Irányszög számítás"
                 android:id="@+id/iranyszog"
-                android:layout_column="0" />
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_column="0"
+                android:text="Irányszög számítás" />
 
         </TableRow>
 
@@ -30,12 +32,12 @@
             android:layout_height="fill_parent">
 
             <Button
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Poláris pont számítás"
                 android:id="@+id/polaris"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
                 android:layout_column="0"
-                android:layout_marginTop="10dp" />
+                android:layout_marginTop="10dp"
+                android:text="Poláris pont számítás" />
         </TableRow>
 
         <TableRow
@@ -43,13 +45,33 @@
             android:layout_height="fill_parent">
 
             <Button
+                android:id="@+id/numerikus"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Numerikus területszámítás"
-                android:id="@+id/numerikus"
                 android:layout_column="0"
-                android:layout_marginTop="10dp" />
+                android:layout_marginTop="10dp"
+                android:text="Numerikus területszámítás" />
 
+        </TableRow>
+
+        <TableRow
+            android:layout_width="fill_parent"
+            android:layout_height="fill_parent">
+
+            <TableRow
+                android:layout_width="fill_parent"
+                android:layout_height="fill_parent"
+                android:layout_column="0"
+                android:weightSum="1">
+
+                <Button
+                    android:id="@+id/haromszog"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_column="0"
+                    android:layout_marginTop="10dp"
+                    android:text="Háromszög" />
+            </TableRow>
         </TableRow>
 
     </TableLayout>
