--- a/app/src/main/res/menu/menu_haromszog.xml
+++ b/app/src/main/res/menu/menu_haromszog.xml
@@ -1,9 +1,15 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    tools:context="hu.valamas.hevesitoolbox.haromszog">
+    tools:context="hu.valamas.hevesitoolbox.szamitas.haromszog/">
     <item
         android:id="@+id/action_reset"
         android:orderInCategory="100"
         android:showAsAction="never"
         android:title="Visszaállítás" />
+    <item
+        android:id="@+id/action_rajz"
+        android:orderInCategory="100"
+        android:showAsAction="never"
+        android:title="Rajzolás" />
+
 </menu>
