--- a/app/src/main/res/menu/menu_numerikusterulet.xml
+++ b/app/src/main/res/menu/menu_numerikusterulet.xml
@@ -5,4 +5,9 @@
         android:title="Visszaállítás"
         android:orderInCategory="100"
         android:showAsAction="never" />
+    <item
+        android:id="@+id/action_rajz"
+        android:orderInCategory="100"
+        android:showAsAction="never"
+        android:title="Rajzolás" />
 </menu>
