--- a/app/src/main/res/menu/menu_polarispont.xml
+++ b/app/src/main/res/menu/menu_polarispont.xml
@@ -5,5 +5,9 @@
         android:title="Visszaállítás"
         android:orderInCategory="100"
         android:showAsAction="never" />
+    <item android:id="@+id/action_info"
+        android:title="Ismertető "
+        android:orderInCategory="100"
+        android:showAsAction="never" />
 </menu>
 
