--- a/app/src/main/res/layout/activity_haromszog.xml
+++ b/app/src/main/res/layout/activity_haromszog.xml
@@ -6,7 +6,7 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="hu.valamas.hevesitoolbox.haromszog.szamitas"
+    tools:context="hu.valamas.hevesitoolbox.szamolasok.haromszog.szamitas"
     android:id="@+id/kep">
 
     <ScrollView
