--- a/app/src/main/res/layout/activity_iranyszog.xml
+++ b/app/src/main/res/layout/activity_iranyszog.xml
@@ -4,7 +4,7 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
-    tools:context="hu.valamas.hevesitoolbox.iranyszog">
+    tools:context="hu.valamas.hevesitoolbox.szamolasok.iranyszog">
 
     <ScrollView
         android:layout_width="wrap_content"
@@ -31,7 +31,7 @@
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Kezdöpont Y"
+                    android:text="@string/iranyszog_kezdopont.y"
                     android:id="@+id/KY"
                     android:layout_alignParentTop="true"
                     android:layout_alignParentLeft="true"
@@ -54,12 +54,13 @@
             <TableRow
                 android:layout_width="fill_parent"
                 android:layout_height="fill_parent"
-                android:layout_marginTop="20dp">
+                android:layout_marginTop="20dp"
+                android:id="@+id/">
 
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Kezdöpont X"
+                    android:text="@string/iranyszog_kezdopont.x"
                     android:id="@+id/KX"
                     android:layout_below="@+id/KY"
                     android:layout_alignParentLeft="true"
@@ -88,7 +89,7 @@
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Végpont Y"
+                    android:text="@string/iranyszog_vegpont.x"
                     android:id="@+id/VY"
                     android:layout_alignParentLeft="true"
                     android:layout_alignParentStart="true"
@@ -116,7 +117,7 @@
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Végpont X"
+                    android:text="@string/iranyszog_vegpont.x"
                     android:id="@+id/VX"
                     android:layout_below="@+id/VY"
                     android:layout_alignParentLeft="true"
