--- a/app/src/main/res/menu/menu_numerikusterulet.xml
+++ b/app/src/main/res/menu/menu_numerikusterulet.xml
@@ -1,6 +1,6 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    tools:context="hu.valamas.hevesitoolbox.numerikusterulet">
+    tools:context="hu.valamas.hevesitoolbox.szamolasok.numerikusterulet">
     <item android:id="@+id/action_reset"
         android:title="Visszaállítás"
         android:orderInCategory="100"
