--- a/app/src/main/res/menu/menu_polarispont.xml
+++ b/app/src/main/res/menu/menu_polarispont.xml
@@ -1,6 +1,6 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    tools:context="hu.valamas.hevesitoolbox.polarispont">
+    tools:context="hu.valamas.hevesitoolbox.szamolasok.polarispont">
     <item android:id="@+id/action_reset"
         android:title="Visszaállítás"
         android:orderInCategory="100"
