--- a/app/src/main/res/layout/activity_iranyszog.xml
+++ b/app/src/main/res/layout/activity_iranyszog.xml
@@ -17,10 +17,7 @@
 
         <TableLayout
             android:layout_width="fill_parent"
-            android:layout_height="fill_parent"
-            android:layout_alignParentTop="true"
-            android:layout_alignParentLeft="true"
-            android:layout_alignParentStart="true"
+            android:layout_height="wrap_content"
             android:stretchColumns="*">
 
             <TableRow
@@ -33,9 +30,6 @@
                     android:layout_height="wrap_content"
                     android:text="@string/iranyszog_kezdopont.y"
                     android:id="@+id/KY"
-                    android:layout_alignParentTop="true"
-                    android:layout_alignParentLeft="true"
-                    android:layout_alignParentStart="true"
                     android:layout_column="0" />
 
                 <EditText
@@ -44,27 +38,19 @@
                     android:inputType="numberDecimal"
                     android:ems="10"
                     android:id="@+id/KY_in"
-                    android:layout_above="@+id/KX"
-                    android:layout_toRightOf="@+id/KY"
-                    android:layout_alignParentRight="true"
-                    android:layout_alignParentEnd="true"
                     android:layout_column="2" />
             </TableRow>
 
             <TableRow
                 android:layout_width="fill_parent"
                 android:layout_height="fill_parent"
-                android:layout_marginTop="20dp"
-                android:id="@+id/">
+                android:layout_marginTop="20dp">
 
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="@string/iranyszog_kezdopont.x"
                     android:id="@+id/KX"
-                    android:layout_below="@+id/KY"
-                    android:layout_alignParentLeft="true"
-                    android:layout_alignParentStart="true"
                     android:layout_column="0" />
 
                 <EditText
@@ -73,11 +59,6 @@
                     android:inputType="numberDecimal"
                     android:ems="10"
                     android:id="@+id/KX_in"
-                    android:layout_alignBottom="@+id/KX"
-                    android:layout_alignLeft="@+id/KY_in"
-                    android:layout_alignStart="@+id/KY_in"
-                    android:layout_alignRight="@+id/KY_in"
-                    android:layout_alignEnd="@+id/KY_in"
                     android:layout_column="2" />
             </TableRow>
 
@@ -91,8 +72,6 @@
                     android:layout_height="wrap_content"
                     android:text="@string/iranyszog_vegpont.x"
                     android:id="@+id/VY"
-                    android:layout_alignParentLeft="true"
-                    android:layout_alignParentStart="true"
                     android:layout_column="0" />
 
                 <EditText
@@ -101,11 +80,6 @@
                     android:inputType="numberDecimal"
                     android:ems="10"
                     android:id="@+id/VY_in"
-                    android:layout_above="@+id/VX_in"
-                    android:layout_alignParentRight="true"
-                    android:layout_alignParentEnd="true"
-                    android:layout_alignLeft="@+id/KX_in"
-                    android:layout_alignStart="@+id/KX_in"
                     android:layout_column="2" />
             </TableRow>
 
@@ -119,9 +93,6 @@
                     android:layout_height="wrap_content"
                     android:text="@string/iranyszog_vegpont.x"
                     android:id="@+id/VX"
-                    android:layout_below="@+id/VY"
-                    android:layout_alignParentLeft="true"
-                    android:layout_alignParentStart="true"
                     android:layout_column="0" />
 
                 <EditText
@@ -130,11 +101,6 @@
                     android:inputType="numberDecimal"
                     android:ems="10"
                     android:id="@+id/VX_in"
-                    android:layout_alignBottom="@+id/VX"
-                    android:layout_alignLeft="@+id/VY_in"
-                    android:layout_alignStart="@+id/VY_in"
-                    android:layout_alignParentRight="true"
-                    android:layout_alignParentEnd="true"
                     android:layout_column="2" />
             </TableRow>
 
@@ -146,11 +112,8 @@
                 <Button
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Számol"
+                    android:text="@string/iranyszog_szamol"
                     android:id="@+id/button"
-                    android:layout_centerVertical="true"
-                    android:layout_alignLeft="@+id/tav"
-                    android:layout_alignStart="@+id/tav"
                     android:layout_column="0"
                     android:layout_span="3" />
             </TableRow>
@@ -163,21 +126,18 @@
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Szög :"
+                    android:text="@string/iranyszog_szog"
                     android:id="@+id/szog_text"
-                    android:textSize="20dp"
+                    android:textSize="20sp"
                     android:layout_column="0"
                     android:visibility="invisible" />
 
                 <TextView
                     android:layout_width="fill_parent"
                     android:layout_height="wrap_content"
-                    android:text="Szög"
                     android:id="@+id/szogkiir"
-                    android:textSize="20dp"
-                    android:layout_below="@+id/button"
-                    android:layout_alignParentLeft="true"
-                    android:layout_alignParentStart="true"
+                    android:textSize="20sp"
+
                     android:visibility="invisible"
                     android:layout_column="2" />
             </TableRow>
@@ -190,22 +150,18 @@
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Távolság :"
+                    android:text="@string/iranyszog_tavolsag"
                     android:id="@+id/tav_text"
-                    android:textSize="20dp"
+                    android:textSize="20sp"
                     android:layout_column="0"
                     android:visibility="invisible" />
 
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Távolság"
                     android:id="@+id/tav"
                     android:visibility="invisible"
-                    android:textSize="20dp"
-                    android:layout_below="@+id/szogkiir"
-                    android:layout_alignParentLeft="true"
-                    android:layout_alignParentStart="true"
+                    android:textSize="20sp"
                     android:layout_column="2" />
             </TableRow>
 
