--- a/app/src/main/res/menu/menu_atvalto.xml
+++ b/app/src/main/res/menu/menu_atvalto.xml
@@ -1,5 +1,7 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools" tools:context="hu.valamas.hevesitoolbox.szamolasok.atvalto">
-    <item android:id="@+id/action_settings" android:title="@string/action_settings"
-        android:orderInCategory="100" android:showAsAction="never" />
+    <item android:id="@+id/action_reset"
+        android:title="Visszaállítás"
+        android:orderInCategory="100"
+        android:showAsAction="never" />
 </menu>
